CLDSVCS-2356 osb-lcs-admin - formatSource