@@ -15,17 +15,17 @@
 package com.liferay.osb.lcs.admin.internal.advisor;
 
 import com.liferay.lcs.util.LCSClusterNodeStatus;
-import com.liferay.osb.lcs.configuration.OSBLCSConfiguration;
-import com.liferay.osb.lcs.constants.OSBLCSPortletKeys;
-import com.liferay.osb.lcs.exception.NoSuchLCSClusterNodeException;
 import com.liferay.osb.lcs.cache.ActiveLCSCLusterNodeCacheManager;
 import com.liferay.osb.lcs.cache.LCSClusterNodeLoggingCacheManager;
 import com.liferay.osb.lcs.cache.MessageForwardCacheManager;
+import com.liferay.osb.lcs.configuration.OSBLCSConfiguration;
+import com.liferay.osb.lcs.constants.LCSRoleConstants;
+import com.liferay.osb.lcs.constants.OSBLCSPortletKeys;
+import com.liferay.osb.lcs.exception.NoSuchLCSClusterNodeException;
 import com.liferay.osb.lcs.model.LCSClusterEntry;
 import com.liferay.osb.lcs.model.LCSClusterNode;
 import com.liferay.osb.lcs.model.LCSProject;
 import com.liferay.osb.lcs.model.LCSRole;
-import com.liferay.osb.lcs.constants.LCSRoleConstants;
 import com.liferay.osb.lcs.nosql.model.LCSClusterNodeDetails;
 import com.liferay.osb.lcs.nosql.model.LCSClusterNodeInstallationEnvironment;
 import com.liferay.osb.lcs.nosql.model.LCSClusterNodeJVMMetrics;
@@ -38,32 +38,23 @@ import com.liferay.osb.lcs.service.LCSClusterEntryLocalService;
 import com.liferay.osb.lcs.service.LCSClusterNodeLocalService;
 import com.liferay.osb.lcs.service.LCSProjectLocalService;
 import com.liferay.osb.lcs.service.LCSRoleLocalService;
-import com.liferay.osb.lcs.util.ApplicationProfile;
 import com.liferay.portal.configuration.metatype.bnd.util.ConfigurableUtil;
-import com.liferay.portal.kernel.util.PortletKeys;
 import com.liferay.portal.kernel.dao.orm.QueryUtil;
 import com.liferay.portal.kernel.exception.PortalException;
-import com.liferay.portal.kernel.exception.SystemException;
+import com.liferay.portal.kernel.model.CompanyConstants;
 import com.liferay.portal.kernel.service.PortletPreferencesLocalService;
 import com.liferay.portal.kernel.util.GetterUtil;
+import com.liferay.portal.kernel.util.PortalUtil;
+import com.liferay.portal.kernel.util.PortletKeys;
 import com.liferay.portal.kernel.util.StringPool;
 import com.liferay.portal.kernel.util.StringUtil;
 import com.liferay.portal.kernel.util.UniqueList;
 import com.liferay.portal.kernel.util.Validator;
-import com.liferay.portal.kernel.model.CompanyConstants;
-import com.liferay.portal.kernel.util.PortalUtil;
-import org.osgi.service.component.annotations.Activate;
-import org.osgi.service.component.annotations.Component;
-import org.osgi.service.component.annotations.ConfigurationPolicy;
-import org.osgi.service.component.annotations.Deactivate;
-import org.osgi.service.component.annotations.Reference;
 
 import java.text.NumberFormat;
 
 import java.util.ArrayList;
-import java.util.HashMap;
 import java.util.HashSet;
-import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -71,13 +62,20 @@ import java.util.regex.Pattern;
 
 import javax.portlet.PortletPreferences;
 
+import org.osgi.service.component.annotations.Activate;
+import org.osgi.service.component.annotations.Component;
+import org.osgi.service.component.annotations.ConfigurationPolicy;
+import org.osgi.service.component.annotations.Deactivate;
+import org.osgi.service.component.annotations.Reference;
+
 /**
  * @author Igor Beslic
  * @author Marko Cikos
  */
 @Component(
 	configurationPid = "com.liferay.osb.lcs.configuration.OSBLCSConfiguration",
-	configurationPolicy = ConfigurationPolicy.REQUIRE, immediate = true
+	configurationPolicy = ConfigurationPolicy.REQUIRE, immediate = true,
+	service = AdminAdvisor.class
 )
 public class AdminAdvisor {
 
@@ -85,9 +83,7 @@ public class AdminAdvisor {
 		_activeLCSCLusterNodeCacheManager.remove("ACTIVE_" + key);
 	}
 
-	public void enableLCSClusterNodeLogging(
-		String key, boolean enableLogging) {
-
+	public void enableLCSClusterNodeLogging(String key, boolean enableLogging) {
 		if (enableLogging) {
 			_lcsClusterNodeLoggingCacheManager.put(key, true);
 		}
@@ -108,17 +104,16 @@ public class AdminAdvisor {
 	}
 
 	public List<Object[]> getLCSClusterNodeObjectArrays()
-		throws PortalException, SystemException {
+		throws PortalException {
 
 		return getLCSClusterNodeObjectArrays(
 			QueryUtil.ALL_POS, QueryUtil.ALL_POS);
 	}
 
-	public List<Object[]> getLCSClusterNodeObjectArrays(
-			int start, int end)
-		throws PortalException, SystemException {
+	public List<Object[]> getLCSClusterNodeObjectArrays(int start, int end)
+		throws PortalException {
 
-		List<Object[]> lcsClusterNodeObjectArrays = new ArrayList<Object[]>();
+		List<Object[]> lcsClusterNodeObjectArrays = new ArrayList<>();
 
 		List<LCSClusterNode> lcsClusterNodes =
 			_lcsClusterNodeLocalService.getLCSClusterNodes(start, end);
@@ -132,9 +127,9 @@ public class AdminAdvisor {
 
 	public List<Object[]> getLCSClusterNodeObjectArrays(
 			String lcsClusterNodeKey)
-		throws PortalException, SystemException {
+		throws PortalException {
 
-		List<Object[]> lcsClusterNodeObjectArrays = new ArrayList<Object[]>();
+		List<Object[]> lcsClusterNodeObjectArrays = new ArrayList<>();
 
 		try {
 			LCSClusterNode lcsClusterNode =
@@ -143,7 +138,7 @@ public class AdminAdvisor {
 
 			lcsClusterNodeObjectArrays.add(getColumns(lcsClusterNode));
 		}
-		catch (NoSuchLCSClusterNodeException se) {
+		catch (NoSuchLCSClusterNodeException nslcscne) {
 		}
 
 		return lcsClusterNodeObjectArrays;
@@ -152,11 +147,11 @@ public class AdminAdvisor {
 	public List<Object[]> getLCSClusterNodeObjectArrays(
 			String lcsClusterEntryName, String lcsClusterNodeStatusName,
 			String lcsProjectName, boolean andOperator)
-		throws PortalException, SystemException {
+		throws PortalException {
 
-		List<Object[]> lcsClusterNodeObjectArrays = new ArrayList<Object[]>();
+		List<Object[]> lcsClusterNodeObjectArrays = new ArrayList<>();
 
-		Set<LCSClusterNode> lcsClusterNodes = new HashSet<LCSClusterNode>();
+		Set<LCSClusterNode> lcsClusterNodes = new HashSet<>();
 
 		if (Validator.isNull(lcsProjectName) &&
 			Validator.isNull(lcsClusterEntryName)) {
@@ -196,7 +191,7 @@ public class AdminAdvisor {
 			return lcsClusterNodeObjectArrays;
 		}
 
-		Set<LCSClusterNode> allLCSClusterNodes = new HashSet<LCSClusterNode>();
+		Set<LCSClusterNode> allLCSClusterNodes = new HashSet<>();
 
 		allLCSClusterNodes.addAll(
 			_lcsClusterNodeLocalService.getLCSClusterNodes(
@@ -215,16 +210,14 @@ public class AdminAdvisor {
 		return lcsClusterNodeObjectArrays;
 	}
 
-	public PortletPreferences getPortletPreferences()
-		throws SystemException {
-
+	public PortletPreferences getPortletPreferences() {
 		return _portletPreferencesLocalService.getPreferences(
 			CompanyConstants.SYSTEM, CompanyConstants.SYSTEM,
 			PortletKeys.PREFS_OWNER_TYPE_COMPANY, PortletKeys.PREFS_PLID_SHARED,
 			OSBLCSPortletKeys.ADMIN, null);
 	}
 
-	public boolean isBillingEnabled() throws SystemException {
+	public boolean isBillingEnabled() {
 		PortletPreferences portletPreferences = getPortletPreferences();
 
 		return GetterUtil.getBoolean(
@@ -233,29 +226,126 @@ public class AdminAdvisor {
 
 	public boolean isLCSClusterNodeLoggingEnabled(String key) {
 		return GetterUtil.getBoolean(
-			_lcsClusterNodeLoggingCacheManager.isEnabled(key), false);
+			_lcsClusterNodeLoggingCacheManager.isEnabled(key));
 	}
 
 	public boolean isMessageForwardEnabled(String queuePrefix) {
 		return _messageForwardCacheManager.isEnabled(queuePrefix);
 	}
 
-	public boolean isSendingEmailsEnabled() throws SystemException {
+	public boolean isSendingEmailsEnabled() {
 		PortletPreferences portletPreferences = getPortletPreferences();
 
 		return GetterUtil.getBoolean(
 			portletPreferences.getValue("sending-emails-enabled", null));
 	}
 
-	public boolean isSubscriptionsEnabled() throws SystemException {
+	public boolean isSubscriptionsEnabled() {
 		PortletPreferences portletPreferences = getPortletPreferences();
 
 		return GetterUtil.getBoolean(
 			portletPreferences.getValue("subscriptions-enabled", null));
 	}
 
+	@Reference(unbind = "-")
+	public void setActiveLCSCLusterNodeCacheManager(
+		ActiveLCSCLusterNodeCacheManager activeLCSCLusterNodeCacheManager) {
+
+		_activeLCSCLusterNodeCacheManager = activeLCSCLusterNodeCacheManager;
+	}
+
+	@Reference(unbind = "-")
+	public void setLCSClusterEntryLocalService(
+		LCSClusterEntryLocalService lcsClusterEntryLocalService) {
+
+		_lcsClusterEntryLocalService = lcsClusterEntryLocalService;
+	}
+
+	@Reference(unbind = "-")
+	public void setLCSClusterNodeDetailsService(
+		LCSClusterNodeDetailsService lcsClusterNodeDetailsService) {
+
+		_lcsClusterNodeDetailsService = lcsClusterNodeDetailsService;
+	}
+
+	@Reference(unbind = "-")
+	public void setLCSClusterNodeInstallationEnvironmentService(
+		LCSClusterNodeInstallationEnvironmentService
+			lcsClusterNodeInstallationEnvironmentService) {
+
+		_lcsClusterNodeInstallationEnvironmentService =
+			lcsClusterNodeInstallationEnvironmentService;
+	}
+
+	@Reference(unbind = "-")
+	public void setLcsClusterNodeJVMMetricsService(
+		LCSClusterNodeJVMMetricsService lcsClusterNodeJVMMetricsService) {
+
+		_lcsClusterNodeJVMMetricsService = lcsClusterNodeJVMMetricsService;
+	}
+
+	@Reference(unbind = "-")
+	public void setLCSClusterNodeLocalService(
+		LCSClusterNodeLocalService lcsClusterNodeLocalService) {
+
+		_lcsClusterNodeLocalService = lcsClusterNodeLocalService;
+	}
+
+	@Reference(unbind = "-")
+	public void setLCSClusterNodeLoggingCacheManager(
+		LCSClusterNodeLoggingCacheManager lcsClusterNodeLoggingCacheManager) {
+
+		_lcsClusterNodeLoggingCacheManager = lcsClusterNodeLoggingCacheManager;
+	}
+
+	@Reference(unbind = "-")
+	public void setLCSClusterNodePatchesService(
+		LCSClusterNodePatchesService lcsClusterNodePatchesService) {
+
+		_lcsClusterNodePatchesService = lcsClusterNodePatchesService;
+	}
+
+	@Reference(unbind = "-")
+	public void setLCSProjectLocalService(
+		LCSProjectLocalService lcsProjectLocalService) {
+
+		_lcsProjectLocalService = lcsProjectLocalService;
+	}
+
+	@Reference(unbind = "-")
+	public void setLCSRoleLocalService(
+		LCSRoleLocalService lcsRoleLocalService) {
+
+		_lcsRoleLocalService = lcsRoleLocalService;
+	}
+
+	@Reference(unbind = "-")
+	public void setMessageForwardCacheManager(
+		MessageForwardCacheManager messageForwardCacheManager) {
+
+		_messageForwardCacheManager = messageForwardCacheManager;
+	}
+
+	@Reference(unbind = "-")
+	public void setPortletPreferencesLocalService(
+		PortletPreferencesLocalService portletPreferencesLocalService) {
+
+		_portletPreferencesLocalService = portletPreferencesLocalService;
+	}
+
+	@Activate
+	protected void activate(Map<String, Object> properties) {
+		_osbLCSConfiguration = ConfigurableUtil.createConfigurable(
+			OSBLCSConfiguration.class, properties);
+	}
+
+	@Deactivate
+	protected void deactivate() {
+		_osbLCSConfiguration = null;
+	}
+
 	protected Object[] getColumns(LCSClusterNode lcsClusterNode)
-		throws PortalException, SystemException {
+		throws PortalException {
 
 		Object[] columns = new Object[14];
 
@@ -267,10 +357,13 @@ public class AdminAdvisor {
 			lcsClusterEntry.getLcsProjectId());
 
 		columns[0] = lcsProject.getName();
+
 		columns[1] = lcsClusterEntry;
+
 		columns[2] = lcsClusterNode.getKey();
 		columns[3] = lcsClusterNode.getName();
-		columns[4] = new Integer(0);
+
+		columns[4] = Integer.valueOf(0);
 
 		LCSClusterNodeDetails lcsClusterNodeDetails =
 			_lcsClusterNodeDetailsService.fetchLCSClusterNodeDetails(
@@ -280,7 +373,7 @@ public class AdminAdvisor {
 			return columns;
 		}
 
-		columns[4] = new Integer(lcsClusterNodeDetails.getStatus());
+		columns[4] = Integer.valueOf(lcsClusterNodeDetails.getStatus());
 		columns[5] = lcsClusterNodeDetails.getPortalEdition();
 		columns[6] = lcsClusterNodeDetails.getBuildNumber();
 		columns[7] = lcsClusterNodeDetails.getLastHeartbeat();
@@ -310,19 +403,18 @@ public class AdminAdvisor {
 
 		if (lcsClusterNodeInstallationEnvironment != null) {
 			Map<String, String> softwareMetadata =
-				lcsClusterNodeInstallationEnvironment. getSoftwareMetadata();
+				lcsClusterNodeInstallationEnvironment.getSoftwareMetadata();
 
 			if (softwareMetadata != null) {
 				columns[11] = softwareMetadata.get("lcs.portlet.build.number");
 			}
 		}
 
-		List<String> emailAddresses = new UniqueList<String>();
+		List<String> emailAddresses = new UniqueList<>();
 
-		List<LCSRole> lcsRoles =
-			_lcsRoleLocalService.getLCSProjectLCSRoles(
-				lcsProject.getLcsProjectId(),
-				LCSRoleConstants.ROLE_LCS_ADMINISTRATOR);
+		List<LCSRole> lcsRoles = _lcsRoleLocalService.getLCSProjectLCSRoles(
+			lcsProject.getLcsProjectId(),
+			LCSRoleConstants.ROLE_LCS_ADMINISTRATOR);
 
 		for (LCSRole lcsRole : lcsRoles) {
 			String emailAddress = PortalUtil.getUserEmailAddress(
@@ -342,131 +434,30 @@ public class AdminAdvisor {
 		return columns;
 	}
 
-	@Activate
-	protected void activate(Map<String, Object> properties) {
-		_osbLCSConfiguration = ConfigurableUtil.createConfigurable(
-			OSBLCSConfiguration.class, properties);
-	}
-
-	@Deactivate
-	protected void deactivate() {
-		_osbLCSConfiguration = null;
-	}
-
-	@Reference(unbind = "-")
-	protected void setPortletPreferencesLocalService(
-		PortletPreferencesLocalService portletPreferencesLocalService) {
-
-		_portletPreferencesLocalService = portletPreferencesLocalService;
-	}
-
-	@Reference(unbind = "-")
-	protected void setActiveLCSCLusterNodeCacheManager(
-		ActiveLCSCLusterNodeCacheManager activeLCSCLusterNodeCacheManager) {
-
-		_activeLCSCLusterNodeCacheManager = activeLCSCLusterNodeCacheManager;
-	}
-
-	@Reference(unbind = "-")
-	protected void setLCSClusterNodeDetailsService(
-		LCSClusterNodeDetailsService lcsClusterNodeDetailsService) {
-
-		_lcsClusterNodeDetailsService = lcsClusterNodeDetailsService;
-	}
-
-	@Reference(unbind = "-")
-	protected void setLCSClusterNodeInstallationEnvironmentService(
-		LCSClusterNodeInstallationEnvironmentService
-			lcsClusterNodeInstallationEnvironmentService) {
-
-		_lcsClusterNodeInstallationEnvironmentService =
-			lcsClusterNodeInstallationEnvironmentService;
-	}
-
-	@Reference(unbind = "-")
-	protected void setLcsClusterNodeJVMMetricsService(
-		LCSClusterNodeJVMMetricsService lcsClusterNodeJVMMetricsService) {
-
-		_lcsClusterNodeJVMMetricsService = lcsClusterNodeJVMMetricsService;
-	}
-
-	@Reference(unbind = "-")
-	protected void setLCSClusterNodeLoggingCacheManager(
-		LCSClusterNodeLoggingCacheManager lcsClusterNodeLoggingCacheManager) {
-
-		_lcsClusterNodeLoggingCacheManager = lcsClusterNodeLoggingCacheManager;
-	}
-
-	@Reference(unbind = "-")
-	protected void setLCSClusterNodePatchesService(
-		LCSClusterNodePatchesService lcsClusterNodePatchesService) {
-
-		_lcsClusterNodePatchesService = lcsClusterNodePatchesService;
-	}
-
-	@Reference(unbind = "-")
-	protected void setMessageForwardCacheManager(
-		MessageForwardCacheManager messageForwardCacheManager) {
-
-		_messageForwardCacheManager = messageForwardCacheManager;
-	}
-
-	@Reference(unbind = "-")
-	protected void setLCSClusterEntryLocalService(
-		LCSClusterEntryLocalService lcsClusterEntryLocalService) {
-
-		_lcsClusterEntryLocalService = lcsClusterEntryLocalService;
-	}
-
-	@Reference(unbind = "-")
-	protected void setLCSClusterNodeLocalService(
-		LCSClusterNodeLocalService lcsClusterNodeLocalService) {
-
-		_lcsClusterNodeLocalService = lcsClusterNodeLocalService;
-	}
-
-	@Reference(unbind = "-")
-	protected void setLCSProjectLocalService(
-		LCSProjectLocalService lcsProjectLocalService) {
-
-		_lcsProjectLocalService = lcsProjectLocalService;
-	}
-
-	@Reference(unbind = "-")
-	protected void setLCSRoleLocalService(
-		LCSRoleLocalService lcsRoleLocalService) {
-
-		_lcsRoleLocalService = lcsRoleLocalService;
-	}
-
-	private PortletPreferencesLocalService _portletPreferencesLocalService;
-	private ActiveLCSCLusterNodeCacheManager _activeLCSCLusterNodeCacheManager;
-	private LCSClusterNodeDetailsService _lcsClusterNodeDetailsService;
-	private LCSClusterNodeInstallationEnvironmentService
-		_lcsClusterNodeInstallationEnvironmentService;
-
-	private LCSClusterNodeJVMMetricsService _lcsClusterNodeJVMMetricsService;
-	private LCSClusterNodeLoggingCacheManager
-		_lcsClusterNodeLoggingCacheManager;
-
-	private LCSClusterNodePatchesService _lcsClusterNodePatchesService;
-	private MessageForwardCacheManager _messageForwardCacheManager;
-
-	private LCSClusterEntryLocalService _lcsClusterEntryLocalService;
-	private LCSClusterNodeLocalService _lcsClusterNodeLocalService;
-	private LCSProjectLocalService _lcsProjectLocalService;
-	private LCSRoleLocalService _lcsRoleLocalService;
-
-	private static NumberFormat _numberFormat = NumberFormat.getInstance();
-	private static Pattern _pattern = Pattern.compile(
-		"(com.liferay.osb.lcs:name=(Gateway|Portlet|Processor))");
-
+	private static final NumberFormat _numberFormat =
+		NumberFormat.getInstance();
 	private static volatile OSBLCSConfiguration _osbLCSConfiguration;
-
+	private static final Pattern _pattern = Pattern.compile(
+		"(com.liferay.osb.lcs:name=(Gateway|Portlet|Processor))");
 
 	static {
 		_numberFormat.setMaximumFractionDigits(2);
 		_numberFormat.setMinimumFractionDigits(2);
 	}
+
+	private ActiveLCSCLusterNodeCacheManager _activeLCSCLusterNodeCacheManager;
+	private LCSClusterEntryLocalService _lcsClusterEntryLocalService;
+	private LCSClusterNodeDetailsService _lcsClusterNodeDetailsService;
+	private LCSClusterNodeInstallationEnvironmentService
+		_lcsClusterNodeInstallationEnvironmentService;
+	private LCSClusterNodeJVMMetricsService _lcsClusterNodeJVMMetricsService;
+	private LCSClusterNodeLocalService _lcsClusterNodeLocalService;
+	private LCSClusterNodeLoggingCacheManager
+		_lcsClusterNodeLoggingCacheManager;
+	private LCSClusterNodePatchesService _lcsClusterNodePatchesService;
+	private LCSProjectLocalService _lcsProjectLocalService;
+	private LCSRoleLocalService _lcsRoleLocalService;
+	private MessageForwardCacheManager _messageForwardCacheManager;
+	private PortletPreferencesLocalService _portletPreferencesLocalService;
 
 }
